# python-sentoo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/sentoo/: __init__.py  _compat.py  async_client.py  client.py
