[project]
name = "sentoo"
dynamic = ["version"]
description = "A client library for Sentoo.io"
readme = "README.md"
authors = [{ name = "Lemi Boyce", email = "lemuelboyce@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.4"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"tests.py" = ["F"]

[tool.pylsp]
dmypy = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pylsp-mypy>=0.7.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.8",
]
