[project]
name = "sentoo"
dynamic = ["version"]
description = "A client library for Sentoo.io"
readme = "README.md"
authors = [{ name = "Lemi Boyce", email = "lemuelboyce@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.4"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.ruff]
exclude = [".venv"]
line-length = 100
indent-width = 4
target-version = "py313"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "I", "B", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"tests.py" = ["F"]
"migrations/**" = ["D"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "parents"

[tool.ruff.analyze]
detect-string-imports = true

[tool.pyright]
typeCheckingMode = "basic"
reportAttributeAccessIssue = false


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.8",
]
